// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component redirects when authenticated 1`] = `<DocumentFragment />`;

exports[`Login component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="login-form"
  >
    <h2>
      Sign In
    </h2>
    <hr />
    <form
      novalidate=""
    >
      <div
        class="row"
      >
        <div
          class="p-0 col-12 order-2 col-md-6 order-md-1"
        >
          <div
            class="col-12 col-md-12"
          >
            <div
              class="input-box "
            >
              <label>
                Your Email
              </label>
              <div
                class="input-text-block"
              >
                <input
                  autocomplete="on"
                  class="input-text"
                  name="email"
                  placeholder="Enter Your Email Address"
                  type="text"
                  value=""
                />
              </div>
              <span
                class="invalid-message"
              />
            </div>
          </div>
          <div
            class="col-12 col-md-12"
          >
            <div
              class="input-box "
            >
              <label>
                Password
              </label>
              <div
                class="input-text-block"
              >
                <input
                  autocomplete="on"
                  class="input-text"
                  name="password"
                  placeholder="Enter Your Password"
                  type="password"
                  value=""
                />
              </div>
              <span
                class="invalid-message"
              />
            </div>
          </div>
        </div>
        <div
          class="mb-2 mb-md-0 col-12 order-1 col-md-6 order-md-2"
        />
      </div>
      <hr />
      <div
        class="d-flex flex-column flex-md-row align-items-md-center justify-content-between"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-3 mb-md-0"
        >
          <button
            class="input-btn custom-btn-primary md text-only icon-left "
            style="border-radius: 3px;"
            type="submit"
          >
            <span
              class="btn-text"
            >
              Sign In
            </span>
          </button>
          <button
            class="input-btn ml-md-3 custom-btn-link md text-only icon-left "
            style="border-radius: 3px;"
            type="button"
          >
            <span
              class="btn-text"
            >
              Create an Account
            </span>
          </button>
        </div>
        <a
          class="redirect-link forgot-password-link"
          href="/forgot-password"
        >
          Forgot Your Password?
        </a>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Login component renders form errors correctly 1`] = `
<DocumentFragment>
  <div
    class="login-form"
  >
    <h2>
      Sign In
    </h2>
    <hr />
    <form
      novalidate=""
    >
      <div
        class="row"
      >
        <div
          class="p-0 col-12 order-2 col-md-6 order-md-1"
        >
          <div
            class="col-12 col-md-12"
          >
            <div
              class="input-box invalid"
            >
              <label>
                Your Email
              </label>
              <div
                class="input-text-block"
              >
                <input
                  autocomplete="on"
                  class="input-text"
                  name="email"
                  placeholder="Enter Your Email Address"
                  type="text"
                  value=""
                />
              </div>
              <span
                class="invalid-message"
              >
                E
              </span>
            </div>
          </div>
          <div
            class="col-12 col-md-12"
          >
            <div
              class="input-box invalid"
            >
              <label>
                Password
              </label>
              <div
                class="input-text-block"
              >
                <input
                  autocomplete="on"
                  class="input-text"
                  name="password"
                  placeholder="Enter Your Password"
                  type="password"
                  value=""
                />
              </div>
              <span
                class="invalid-message"
              >
                P
              </span>
            </div>
          </div>
        </div>
        <div
          class="mb-2 mb-md-0 col-12 order-1 col-md-6 order-md-2"
        />
      </div>
      <hr />
      <div
        class="d-flex flex-column flex-md-row align-items-md-center justify-content-between"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-3 mb-md-0"
        >
          <button
            class="input-btn custom-btn-primary md text-only icon-left "
            style="border-radius: 3px;"
            type="submit"
          >
            <span
              class="btn-text"
            >
              Sign In
            </span>
          </button>
          <button
            class="input-btn ml-md-3 custom-btn-link md text-only icon-left "
            style="border-radius: 3px;"
            type="button"
          >
            <span
              class="btn-text"
            >
              Create an Account
            </span>
          </button>
        </div>
        <a
          class="redirect-link forgot-password-link"
          href="/forgot-password"
        >
          Forgot Your Password?
        </a>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
